# cashclaw-openclaw-adapter

./: .env.example  .pymarkdown.json  Makefile  README.md  handover.md  pyproject.toml
.codex/: ARCHITECTURE.md  BACKLOG.md  DECISIONS.md  PROJECT.md  README.md  STATUS.md  WORKLOG.md
scripts/: bootstrap_memgraph.cypher
src/cashclaw_adapter/: __init__.py  app.py  cashclaw_client.py  config.py  memgraph.py  models.py
tests/: conftest.py  test_app.py  test_cashclaw_client.py  test_config.py  test_memgraph.py  test_models.py
