[project]
name = "cashclaw-openclaw-adapter"
version = "0.1.0"
description = "Adapter between OpenClaw, CashClaw, and Memgraph on odin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "requests==2.32.3",
  "pydantic==2.11.1",
  "pydantic-settings==2.8.1",
  "gqlalchemy==1.6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
